== 0.0.3
 
* Target to compile and embed MacRuby (Xcode)
* Fixed some GUI glitches
* Bundle identifier is be.redstorm.Chill now (instead of com.redstorm.Chill)
 
== 0.0.2
 
* Switched to Core Data for the parameters table. This allows you to save the params to a file.
 
== 0.0.1
 
* Initial release