@@ -34,9 +34,9 @@
 	<key>CFBundleName</key>
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
-	<string>CHILL</string>
+	<string>CHLL</string>
 	<key>CFBundleSignature</key>
-	<string>chill</string>
+	<string>chll</string>
 	<key>CFBundleVersion</key>
 	<string>0.0.3</string>
 	<key>NSMainNibFile</key>
