@@ -1,3 +1,0 @@
-class Parameter
-  attr_accessor :name, :value
-end
