@@ -1,3 +1,8 @@
+== Repository
+
+* Using Core Data for Response Headers
+* More Robust Handling of Request Parameters
+
 == 0.0.3
  
 * Target to compile and embed MacRuby (Xcode)
